@@ -112,7 +112,7 @@ public class LogManager
    * The registered named loggers; maps the name of a Logger to
    * a WeakReference to it.
    */
-  private Map loggers;
+  private Map<String, WeakReference<Logger>> loggers;
   final Logger rootLogger;
 
   /**
@@ -142,7 +142,7 @@ public class LogManager
       throw new IllegalStateException("there can be only one LogManager; use LogManager.getLogManager()");
 
     logManager = this;
-    loggers = new java.util.HashMap();
+    loggers = new java.util.HashMap<String, WeakReference<Logger>>();
     rootLogger = new Logger("", null);
     rootLogger.setLevel(Level.INFO);
     addLogger(rootLogger);
@@ -274,7 +274,7 @@ public class LogManager
      */
     name = logger.getName();
 
-    ref = (WeakReference) loggers.get(name);
+    ref = loggers.get(name);
     if (ref != null)
       {
 	if (ref.get() != null)
@@ -291,7 +291,7 @@ public class LogManager
       checkAccess();
 
     Logger parent = findAncestor(logger);
-    loggers.put(name, new WeakReference(logger));
+    loggers.put(name, new WeakReference<Logger>(logger));
     if (parent != logger.getParent())
       logger.setParent(parent);
 
@@ -303,10 +303,10 @@ public class LogManager
      */
     if (parent != rootLogger)
       {
-	for (Iterator iter = loggers.keySet().iterator(); iter.hasNext();)
+	for (Iterator<String> iter = loggers.keySet().iterator();
+	     iter.hasNext(); )
 	  {
-	    Logger possChild = (Logger) ((WeakReference) loggers.get(iter.next()))
-	                       .get();
+	    Logger possChild = loggers.get(iter.next()).get();
 	    if ((possChild == null) || (possChild == logger)
 	        || (possChild.getParent() != parent))
 	      continue;
@@ -354,9 +354,9 @@ public class LogManager
     if (child == rootLogger)
       return null;
 
-    for (Iterator iter = loggers.keySet().iterator(); iter.hasNext();)
+    for (Iterator<String> iter = loggers.keySet().iterator(); iter.hasNext();)
       {
-	candName = (String) iter.next();
+	candName = iter.next();
 	candNameLength = candName.length();
 
 	if (candNameLength > bestNameLength
@@ -364,7 +364,7 @@ public class LogManager
 	    && childName.startsWith(candName)
 	    && childName.charAt(candNameLength) == '.')
 	  {
-	    cand = (Logger) ((WeakReference) loggers.get(candName)).get();
+	    cand = loggers.get(candName).get();
 	    if ((cand == null) || (cand == child))
 	      continue;
 
@@ -389,14 +389,14 @@ public class LogManager
    */
   public synchronized Logger getLogger(String name)
   {
-    WeakReference ref;
+    WeakReference<Logger> ref;
 
     /* Throw a NullPointerException if name is null. */
     name.getClass();
 
-    ref = (WeakReference) loggers.get(name);
+    ref = loggers.get(name);
     if (ref != null)
-      return (Logger) ref.get();
+      return ref.get();
     else
       return null;
   }
@@ -409,7 +409,7 @@ public class LogManager
    * @return an Enumeration with the names of the currently
    *    registered Loggers.
    */
-  public synchronized Enumeration getLoggerNames()
+  public synchronized Enumeration<String> getLoggerNames()
   {
     return Collections.enumeration(loggers.keySet());
   }
@@ -432,16 +432,16 @@ public class LogManager
 
     properties = new Properties();
 
-    Iterator iter = loggers.values().iterator();
+    Iterator<WeakReference<Logger>> iter = loggers.values().iterator();
     while (iter.hasNext())
       {
-	WeakReference ref;
+	WeakReference<Logger> ref;
 	Logger logger;
 
-	ref = (WeakReference) iter.next();
+	ref = iter.next();
 	if (ref != null)
 	  {
-	    logger = (Logger) ref.get();
+	    logger = ref.get();
 
 	    if (logger == null)
 	      iter.remove();
